change to use pg and jpa

--- a/src/main/resources/front/index.html
+++ b/src/main/resources/front/index.html
@@ -21,7 +21,7 @@
         <div class="divStatic">
           <img src="./images/logo.png"  class="logo"/>
           <div class="divDesc">
-            <div class="divName">Reggie Restaurent</div>
+            <div class="divName">Restaurent</div>
             <div class="divSend">
                 <span><img src="./images/location.png"/> distance: 1.5km</span>
                 <span><img src="./images/money.png"/> shipping fee:6元</span>
