--- a/src/main/resources/backend/index.html
+++ b/src/main/resources/backend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>瑞吉外卖管理端</title>
+    <title>restaurant management system</title>
     <link rel="shortcut icon" href="favicon.ico">
     <!-- 引入样式 -->
     <link rel="stylesheet" href="plugins/element-ui/index.css" />
@@ -74,14 +74,13 @@
           <div class="navbar">
             <div class="head-lable">
               <span v-if="goBackFlag" class="goBack" @click="goBack()"
-                ><img src="images/icons/btn_back@2x.png" alt="" /> 返回</span
+                ><img src="images/icons/btn_back@2x.png" alt="" /> return</span
               >
               <span>{{headTitle}}</span>
             </div>
             <div class="right-menu">
               <div class="avatar-wrapper">{{ userInfo.name }}</div>
-              <!-- <div class="logout" @click="logout">退出</div> -->
-              <img src="images/icons/btn_close@2x.png" class="outLogin" alt="退出" @click="logout" />
+              <img src="images/icons/btn_close@2x.png" class="outLogin" alt="return" @click="logout" />
             </div>
           </div>
           <div class="app-main" v-loading="loading">
@@ -100,11 +99,8 @@
         </div>
       </div>
     </div>
-    <!-- 开发环境版本，包含了有帮助的命令行警告 -->
     <script src="plugins/vue/vue.js"></script>
-    <!-- 引入组件库 -->
     <script src="plugins/element-ui/index.js"></script>
-    <!-- 引入axios -->
     <script src="plugins/axios/axios.min.js"></script>
     <script src="js/request.js"></script>
     <script src="./api/login.js"></script>
