--- a/src/main/resources/front/index.html
+++ b/src/main/resources/front/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=no,minimal-ui">
-    <title>Reggie Order System</title>
+    <title>Aura Dining</title>
     <link rel="icon" href="images/favico.ico">
     <script src="./js/base.js"></script>
     <link rel="stylesheet" href="../backend/plugins/element-ui/index.css" />
@@ -21,12 +21,7 @@
         <div class="divStatic">
           <img src="./images/logo.png"  class="logo"/>
           <div class="divDesc">
-            <div class="divName">Restaurent</div>
-            <div class="divSend">
-                <span><img src="./images/location.png"/> distance: 1.5km</span>
-                <span><img src="./images/money.png"/> shipping fee:6元</span>
-                <span><img src="./images/time.png"/> estimate arrival time: 12min</span>
-            </div>
+            <div class="divName">Aura Dining</div>
           </div>
         </div>
         <div class="divDesc">
@@ -80,7 +75,7 @@
               <span>{{goodsPrice}}</span>
           </div>
           <div class="divPrice"></div>
-          <div :class="{btnSubmitActive: cartData && cartData.length > 0, btnSubmit:!cartData || cartData.length<1}" @click="toAddOrderPage">go checking</div>
+          <div :class="{btnSubmitActive: cartData && cartData.length > 0, btnSubmit:!cartData || cartData.length<1}" @click="toAddOrderPage">check out</div>
         </div>
         <van-dialog v-model="dialogFlavor.show" :show-confirm-button="false" class="dialogFlavor" ref="flavorDialog">
           <div class="dialogTitle">{{dialogFlavor.name}}</div>
