--- a/src/main/resources/backend/index.html
+++ b/src/main/resources/backend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>restaurant management system</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <!-- 引入样式 -->
+    <!-- Import styles -->
     <link rel="stylesheet" href="plugins/element-ui/index.css" />
     <link rel="stylesheet" href="styles/common.css" />
     <link rel="stylesheet" href="styles/index.css" />
@@ -116,35 +116,35 @@
             menuList: [
               // {
               //   id: '1',
-              //   name: '门店管理',
+              //   name: 'Store Management',
               //   children: [
                   {
                     id: '2',
-                    name: '员工管理',
+                    name: 'Employee Management',
                     url: 'page/member/list.html',
                     icon: 'icon-member'
                   },
                   {
                     id: '3',
-                    name: '分类管理',
+                    name: 'Category Management',
                     url: 'page/category/list.html',
                     icon: 'icon-category'
                   },
                   {
                     id: '4',
-                    name: '菜品管理',
+                    name: 'Dish Management',
                     url: 'page/food/list.html',
                     icon: 'icon-food'
                   },
                   {
                     id: '5',
-                    name: '套餐管理',
+                    name: 'Setmeal Management',
                     url: 'page/combo/list.html',
                     icon: 'icon-combo'
                   },
                   {
                     id: '6',
-                    name: '订单明细',
+                    name: 'Order Details',
                     url: 'page/order/list.html',
                     icon: 'icon-order'
                   }
@@ -152,7 +152,7 @@
               // },
             ],
             iframeUrl: 'page/member/list.html',
-            headTitle: '员工管理',
+            headTitle: 'Employee Management',
             goBackFlag: false,
             loading: true,
             timer: null
