--- a/src/main/resources/front/index.html
+++ b/src/main/resources/front/index.html
@@ -177,7 +177,7 @@
                     <img src="./images/noImg.png"/>
                   </div>
                 </el-image>
-                <div class="divSubTitle">{{item.name + '(' + item.copies + '份)' }}
+                <div class="divSubTitle">{{item.name + '(' + item.copies + ' servings)' }}
                   <div class="divPrice">
                     <span>$</span><span>{{item.price/100}}</span>
                   </div>
