--- a/src/main/resources/backend/styles/icon/demo_index.html
+++ b/src/main/resources/backend/styles/icon/demo_index.html
@@ -11,7 +11,7 @@
   <script src="iconfont.js"></script>
   <!-- jQuery -->
   <script src="https://a1.alicdn.com/oss/uploads/2018/12/26/7bfddb60-08e8-11e9-9b04-53e73bb6408b.js"></script>
-  <!-- 代码高亮 -->
+  <!-- Code highlighting -->
   <script src="https://a1.alicdn.com/oss/uploads/2018/12/26/a3f714d0-08e6-11e9-8a15-ebf944d7534c.js"></script>
   <style>
     .main .logo {
@@ -47,7 +47,7 @@
         <li class="dib"><span>Symbol</span></li>
       </ul>
       
-      <a href="https://www.iconfont.cn/manage/index?manage_type=myprojects&projectId=2552591" target="_blank" class="nav-more">查看项目</a>
+      <a href="https://www.iconfont.cn/manage/index?manage_type=myprojects&projectId=2552591" target="_blank" class="nav-more">View Project</a>
       
     </div>
     <div class="tab-container">
