--- a/src/main/resources/backend/index.html
+++ b/src/main/resources/backend/index.html
@@ -116,35 +116,35 @@
             menuList: [
               // {
               //   id: '1',
-              //   name: 'Store Management',
+              //   name: 'Store',
               //   children: [
                   {
                     id: '2',
-                    name: 'Employee Management',
+                    name: 'Employee',
                     url: 'page/member/list.html',
                     icon: 'icon-member'
                   },
                   {
                     id: '3',
-                    name: 'Category Management',
+                    name: 'Category',
                     url: 'page/category/list.html',
                     icon: 'icon-category'
                   },
                   {
                     id: '4',
-                    name: 'Dish Management',
+                    name: 'Dish',
                     url: 'page/food/list.html',
                     icon: 'icon-food'
                   },
                   {
                     id: '5',
-                    name: 'Setmeal Management',
+                    name: 'Combo',
                     url: 'page/combo/list.html',
                     icon: 'icon-combo'
                   },
                   {
                     id: '6',
-                    name: 'Order Details',
+                    name: 'Orders',
                     url: 'page/order/list.html',
                     icon: 'icon-order'
                   }
@@ -152,7 +152,7 @@
               // },
             ],
             iframeUrl: 'page/member/list.html',
-            headTitle: 'Employee Management',
+            headTitle: 'Employee',
             goBackFlag: false,
             loading: true,
             timer: null
